Bug 254279 - Kate crashed after ctrl-r was pressed
Summary: Kate crashed after ctrl-r was pressed
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-15 17:43 UTC by Kevin Adler
Modified: 2010-11-17 21:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.71 KB, text/plain)
2010-10-19 21:54 UTC, Kevin Adler
Details
New crash information added by DrKonqi (10.86 KB, text/plain)
2010-10-24 09:13 UTC, arrenlex
Details
New crash information added by DrKonqi (6.32 KB, text/plain)
2010-11-17 05:56 UTC, fantasai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Adler 2010-10-15 17:43:42 UTC
Application: kate (3.5.2)
KDE Platform Version: 4.5.2 (KDE 4.5.2) "release 5"
Qt Version: 4.6.3
Operating System: Linux 2.6.34.7-0.3-desktop x86_64
Distribution: "openSUSE 11.3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Used ctrl-f to bring up find dialog, pasted a word to find. Pressed ctrl-r to change to find/replace and Kate crashed.

-- Backtrace:
Application: Kate (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f8735296760 (LWP 28613))]

Thread 2 (Thread 0x7f871cfb2710 (LWP 28633)):
#0  0x00007f8733c4e39c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f8729cd9e30 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7f8729fbf220) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2304
#2  0x00007f8729cd9e69 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f8729fcd2ec) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1438
#3  0x00007f8733c49a4f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f8732a3982d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f8735296760 (LWP 28613)):
[KCrash Handler]
#6  0x00007f871ea2c69a in KateSearchBar::onIncPatternChanged (this=0x175e610, pattern=...) at /usr/src/debug/kdelibs-4.5.2/kate/search/katesearchbar.cpp:364
#7  0x00007f871ea2cb6b in KateSearchBar::qt_metacall (this=0x175e610, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff4746f360)
    at /usr/src/debug/kdelibs-4.5.2/build/kate/katesearchbar.moc:125
#8  0x00007f8733fd2a1f in QMetaObject::activate (sender=0x12f6e20, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff4746f360) at kernel/qobject.cpp:3295
#9  0x00007f873354fd55 in QComboBox::textChanged (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qcombobox.cpp:316
#10 0x00007f873355246a in QComboBox::qt_metacall (this=0x12f6e20, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff4746f490) at .moc/release-shared/moc_qcombobox.cpp:186
#11 0x00007f8733fd2a1f in QMetaObject::activate (sender=0x1fed570, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff4746f490) at kernel/qobject.cpp:3295
#12 0x00007f87335860c2 in QLineEdit::textChanged (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qlineedit.cpp:238
#13 0x00007f873358655c in QLineEdit::qt_metacall (this=0x1fed570, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff4746f620) at .moc/release-shared/moc_qlineedit.cpp:156
#14 0x00007f8733fd2a1f in QMetaObject::activate (sender=0x1fed900, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff4746f620) at kernel/qobject.cpp:3295
#15 0x00007f87337ebea5 in QLineControl::textChanged (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qlinecontrol_p.cpp:131
#16 0x00007f873358ae6b in QLineControl::finishChange (this=0x1fed900, validateFromState=-1, update=<value optimized out>, edited=false) at widgets/qlinecontrol.cpp:605
#17 0x00007f873358b0d1 in QLineControl::internalSetText (this=0x1fed900, txt=<value optimized out>, pos=<value optimized out>, edited=false) at widgets/qlinecontrol.cpp:636
#18 0x00007f873354e697 in QComboBoxPrivate::setCurrentIndex (this=0x1febe00, mi=<value optimized out>) at widgets/qcombobox.cpp:2002
#19 0x00007f873354e78c in QComboBox::setCurrentIndex (this=<value optimized out>, index=7) at widgets/qcombobox.cpp:1990
#20 0x00007f8733550f51 in QComboBoxPrivate::_q_editingFinished (this=0x1febe00) at widgets/qcombobox.cpp:1151
#21 0x00007f87335523dc in QComboBox::qt_metacall (this=0x12f6e20, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0x7fff4746f970) at .moc/release-shared/moc_qcombobox.cpp:194
#22 0x00007f8733fd2a1f in QMetaObject::activate (sender=0x1fed570, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3295
#23 0x00007f873358624e in QLineEdit::focusOutEvent (this=0x1fed570, e=<value optimized out>) at widgets/qlineedit.cpp:1828
#24 0x00007f87331e3a7c in QWidget::event (this=0x1fed570, event=0x7fff47470480) at kernel/qwidget.cpp:8157
#25 0x00007f87335845c1 in QLineEdit::event (this=0x1fed570, e=0x7fff47470480) at widgets/qlineedit.cpp:1480
#26 0x00007f87331e3a7c in QWidget::event (this=0x12f6e20, event=0x7fff47470480) at kernel/qwidget.cpp:8157
#27 0x00007f87331934d4 in QApplicationPrivate::notify_helper (this=0x6b6420, receiver=0x12f6e20, e=0x7fff47470480) at kernel/qapplication.cpp:4302
#28 0x00007f873319baca in QApplication::notify (this=<value optimized out>, receiver=0x12f6e20, e=0x7fff47470480) at kernel/qapplication.cpp:4185
#29 0x00007f8734c24796 in KApplication::notify (this=0x7fff47472360, receiver=0x12f6e20, event=0x7fff47470480) at /usr/src/debug/kdelibs-4.5.2/kdeui/kernel/kapplication.cpp:310
#30 0x00007f8733fbee4c in QCoreApplication::notifyInternal (this=0x7fff47472360, receiver=0x12f6e20, event=0x7fff47470480) at kernel/qcoreapplication.cpp:726
#31 0x00007f873319244d in sendEvent (focus=0xb08b20, reason=Qt::OtherFocusReason) at ../../src/corelib/kernel/qcoreapplication.h:215
#32 QApplicationPrivate::setFocusWidget (focus=0xb08b20, reason=Qt::OtherFocusReason) at kernel/qapplication.cpp:2124
#33 0x00007f87331d7671 in QWidget::setFocus (this=0x175e610, reason=Qt::OtherFocusReason) at kernel/qwidget.cpp:6161
#34 0x00007f871ea6aded in KateView::qt_metacall (this=0x16e66a0, _c=QMetaObject::InvokeMetaMethod, _id=93, _a=0x7fff474706a0) at /usr/src/debug/kdelibs-4.5.2/build/kate/kateview.moc:413
#35 0x00007f8733fd2a1f in QMetaObject::activate (sender=0x8ef470, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff474706a0) at kernel/qobject.cpp:3295
#36 0x00007f873318dd12 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#37 0x00007f873318df0a in QAction::activate (this=0x8ef470, event=<value optimized out>) at kernel/qaction.cpp:1255
#38 0x00007f873318e087 in QAction::event (this=<value optimized out>, e=<value optimized out>) at kernel/qaction.cpp:1181
#39 0x00007f8734d8fdfd in KAction::event (this=<value optimized out>, event=0x7fff47470d30) at /usr/src/debug/kdelibs-4.5.2/kdeui/actions/kaction.cpp:131
#40 0x00007f87331934d4 in QApplicationPrivate::notify_helper (this=0x6b6420, receiver=0x8ef470, e=0x7fff47470d30) at kernel/qapplication.cpp:4302
#41 0x00007f873319baca in QApplication::notify (this=<value optimized out>, receiver=0x8ef470, e=0x7fff47470d30) at kernel/qapplication.cpp:4185
#42 0x00007f8734c24796 in KApplication::notify (this=0x7fff47472360, receiver=0x8ef470, event=0x7fff47470d30) at /usr/src/debug/kdelibs-4.5.2/kdeui/kernel/kapplication.cpp:310
#43 0x00007f8733fbee4c in QCoreApplication::notifyInternal (this=0x7fff47472360, receiver=0x8ef470, event=0x7fff47470d30) at kernel/qcoreapplication.cpp:726
#44 0x00007f87331c4f00 in sendEvent (this=<value optimized out>, e=0x7fff47471330) at ../../src/corelib/kernel/qcoreapplication.h:215
#45 QShortcutMap::dispatchEvent (this=<value optimized out>, e=0x7fff47471330) at kernel/qshortcutmap.cpp:879
#46 0x00007f87331c63f8 in QShortcutMap::tryShortcutEvent (this=0x6b6548, o=<value optimized out>, e=0x7fff47471330) at kernel/qshortcutmap.cpp:364
#47 0x00007f873319d715 in QApplication::notify (this=0x7fff47472360, receiver=0x12f6e20, e=0x7fff47471330) at kernel/qapplication.cpp:3748
#48 0x00007f8734c24796 in KApplication::notify (this=0x7fff47472360, receiver=0x12f6e20, event=0x7fff47471330) at /usr/src/debug/kdelibs-4.5.2/kdeui/kernel/kapplication.cpp:310
#49 0x00007f8733fbee4c in QCoreApplication::notifyInternal (this=0x7fff47472360, receiver=0x12f6e20, event=0x7fff47471330) at kernel/qcoreapplication.cpp:726
#50 0x00007f8733230eea in QKeyMapper::sendKeyEvent (keyWidget=0x12f6e20, grab=<value optimized out>, type=QEvent::KeyPress, code=82, modifiers=<value optimized out>, text=..., autorepeat=false, 
    count=1, nativeScanCode=27, nativeVirtualKey=114, nativeModifiers=20) at kernel/qkeymapper_x11.cpp:1875
#51 0x00007f873323136f in QKeyMapperPrivate::translateKeyEvent (this=<value optimized out>, keyWidget=0x12f6e20, event=<value optimized out>, grab=false) at kernel/qkeymapper_x11.cpp:1845
#52 0x00007f873320dbd4 in QApplication::x11ProcessEvent (this=0x7fff47472360, event=0x7fff47471f10) at kernel/qapplication_x11.cpp:3406
#53 0x00007f8733234492 in x11EventSourceDispatch (s=0x6a59d0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#54 0x00007f872fb47a93 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#55 0x00007f872fb48270 in ?? () from /usr/lib64/libglib-2.0.so.0
#56 0x00007f872fb48510 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#57 0x00007f8733fe767f in QEventDispatcherGlib::processEvents (this=0x6be740, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#58 0x00007f873323414e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#59 0x00007f8733fbe292 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#60 0x00007f8733fbe495 in QEventLoop::exec (this=0x7fff47472230, flags=...) at kernel/qeventloop.cpp:201
#61 0x00007f8733fc288b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#62 0x00007f8725c9912d in kdemain () from /usr/lib64/libkdeinit4_kate.so
#63 0x00000000004074a9 in launch (argc=2, _name=0x66af78 "/usr/bin/kate", args=<value optimized out>, cwd=0x0, envc=<value optimized out>, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x66afa6 "kadler;1287075294;827337;4309_TIME523858616") at /usr/src/debug/kdelibs-4.5.2/kinit/kinit.cpp:723
#64 0x0000000000407fc5 in handle_launcher_request (sock=8, who=<value optimized out>) at /usr/src/debug/kdelibs-4.5.2/kinit/kinit.cpp:1215
#65 0x000000000040873a in handle_requests (waitForPid=<value optimized out>) at /usr/src/debug/kdelibs-4.5.2/kinit/kinit.cpp:1408
#66 0x0000000000409390 in main (argc=4, argv=0x7fff47474918, envp=0x7fff47474940) at /usr/src/debug/kdelibs-4.5.2/kinit/kinit.cpp:1892

Reported using DrKonqi
Comment 1 Kevin Adler 2010-10-19 21:54:37 UTC
Created attachment 52687 [details]
New crash information added by DrKonqi

kate (3.5.2) on KDE Platform 4.5.2 (KDE 4.5.2) "release 9" using Qt 4.6.3

- What I was doing when the application crashed:

I was able to reproduce this bug a few times. I was working on a document and hit ctrl-f to pull up find dialog, started typing a query and it autocompleted because I had used this query before, but I think I retyped the whole word anyway. I then hit ctrl-r to do find/replace, and it crashed. I opened the file again and did the same and it crashed again. Repeated once more before I did things differently to continue. I'm not able to reproduce anymore.

-- Backtrace (Reduced):
#6  0x00007f1e45d1369a in KateSearchBar::onIncPatternChanged (this=0x101ba20, pattern=...) at /usr/src/debug/kdelibs-4.5.2/kate/search/katesearchbar.cpp:364
#7  0x00007f1e45d13b6b in KateSearchBar::qt_metacall (this=0x101ba20, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc36203c0)
    at /usr/src/debug/kdelibs-4.5.2/build/kate/katesearchbar.moc:125
[...]
#9  0x00007f1e5a836d55 in QComboBox::textChanged (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qcombobox.cpp:316
#10 0x00007f1e5a83946a in QComboBox::qt_metacall (this=0xfbc0c0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffc36204f0) at .moc/release-shared/moc_qcombobox.cpp:186
[...]
#12 0x00007f1e5a86d0c2 in QLineEdit::textChanged (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qlineedit.cpp:238
Comment 2 arrenlex 2010-10-24 09:13:58 UTC
Created attachment 52815 [details]
New crash information added by DrKonqi

kwrite (4.5.1 (KDE 4.5.1)) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:
After using the find dialog (ctrl+f) to search for strings, I pressed ctrl+r to start replacing words, triggering a crash in kwrite.

-- Backtrace (Reduced):
#6  0x00007f1fd8e8299d in KateSearchBar::onIncPatternChanged (this=0x185fc70, pattern=...) at ../../kate/search/katesearchbar.cpp:362
#7  0x00007f1fd8e89953 in KateSearchBar::qt_metacall (this=0x185fc70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8501bd80) at ./katesearchbar.moc:125
[...]
#9  0x00007f1fe82db695 in QComboBox::textChanged (this=0x7fff8501baf0, _t1=<value optimized out>) at .moc/release-shared/moc_qcombobox.cpp:316
#10 0x00007f1fe82e58b1 in QComboBox::qt_metacall (this=0x17b46a0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8501bec0) at .moc/release-shared/moc_qcombobox.cpp:186
[...]
#12 0x00007f1fe831be72 in QLineEdit::textChanged (this=0x7fff8501baf0, _t1=<value optimized out>) at .moc/release-shared/moc_qlineedit.cpp:242
Comment 3 fantasai 2010-11-17 05:56:12 UTC
Created attachment 53479 [details]
New crash information added by DrKonqi

kate (3.5.1) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:

Typed Ctrl+f to open a find dialog, typed something, remembered I needed Replace, hit Ctrl+R and it crashed

-- Backtrace (Reduced):
#7  0x0212b108 in KateSearchBar::onIncPatternChanged(QString const&) () from /usr/lib/libkatepartinterfaces.so.4
#8  0x02132d4d in KateSearchBar::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkatepartinterfaces.so.4
[...]
[...]
#11 0x011cf6e3 in QComboBox::textChanged(QString const&) () from /usr/lib/libQtGui.so.4
#12 0x011db27a in QComboBox::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtGui.so.4
[...]
[...]
#15 0x01216bf3 in QLineEdit::textChanged(QString const&) () from /usr/lib/libQtGui.so.4
Comment 4 Pascal Létourneau 2010-11-17 21:39:09 UTC
SVN commit 1198197 by pletourn:

Prevent crash

BUG:254279


 M  +2 -0      katesearchbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198197
Comment 5 Pascal Létourneau 2010-11-17 21:40:35 UTC
SVN commit 1198198 by pletourn:

Prevent crash

BUG:254279


 M  +2 -0      katesearchbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198198