SVN commit 1198197 by pletourn:

Prevent crash

BUG:254279